UC#23 Generate test data

--- a/UC23/UC23/UC23.csproj
+++ b/UC23/UC23/UC23.csproj
@@ -9,7 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Bogus" Version="34.0.2" />
-    <PackageReference Include="Bogus.Hollywood" Version="34.0.2" />
+    <PackageReference Include="ServiceStack.Text" Version="6.9.0" />
   </ItemGroup>
 
 </Project>
